--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
     "sequelize": "^4.7.4",
+    "stripe": "^5.4.0",
     "twilio": "^3.11.0"
   },
   "devDependencies": {
