--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-form": "^7.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
+    "semantic-ui-react": "^0.77.2",
     "sequelize": "^4.7.4",
     "stripe": "^5.4.0",
     "twilio": "^3.11.0"
