--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel": "^6.23.0",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
+    "dwolla": "^0.1.5",
     "dwolla-v2": "^1.3.2",
     "express": "^4.14.0",
     "express-session": "^1.15.6",
